Initiated Unit Testing Framework
Using QUnit to unit test individual pages

--- a/src/thrones.Web/Web.config
+++ b/src/thrones.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-SevenThrones.Web-20120816095453;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-SevenThrones.Web-20120816095453.mdf" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-thrones.Web-20120816095453;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-thrones.Web-20120816095453.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
