--- a/src/thrones.Web/thrones.Web.csproj
+++ b/src/thrones.Web/thrones.Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SevenThrones.Web</RootNamespace>
-    <AssemblyName>SevenThrones.Web</AssemblyName>
+    <RootNamespace>thrones.Web</RootNamespace>
+    <AssemblyName>thrones.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -127,16 +127,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BackboneController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\JavascriptTestController.cs" />
+    <Compile Include="Controllers\JsTestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\JavascriptTestModel.cs" />
+    <Compile Include="Models\JsTestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Styles\qunit.css" />
-    <Content Include="Scripts\app\app.js" />
+    <Content Include="Scripts\app\backbone\app.js" />
+    <Content Include="Scripts\app\thrones.js" />
     <Content Include="Scripts\lib\qunit\qunit.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -194,6 +195,8 @@
     <Content Include="Scripts\lib\knockout\knockout-2.0.0.debug.js" />
     <Content Include="Scripts\lib\knockout\knockout-2.0.0.js" />
     <Content Include="Scripts\lib\modernizr\modernizr-2.0.6-development-only.js" />
+    <Content Include="Scripts\tests\backbone\app.js" />
+    <Content Include="Scripts\tests\thrones.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -202,11 +205,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\lib\_references.js" />
+    <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\JsTest\Index.cshtml" />
     <Content Include="Views\Backbone\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
